# ifms-dev-competition

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  venv.sh
.github/workflows/: verification.yml
src/: __init__.py  __main__.py  config.py  env.py  exceptions.py  logging.py  main.py  middleware.py  patterns.py  routes.py
src/api/: lifespan.py  main.py  middleware.py  presenters.py  routes.py
src/common/: enums.py  params.py  patterns.py  types.py
src/core/: config.py  env.py  exception_handler.py  repository.py  screenshot_service.py  use_cases.py
src/repository/: __init__.py  base_repository.py  dynamic_repository.py  queries.py  report_repository.py
src/routes/: __init__.py  admin.py  code_dirs.py  dynamics.py  files.py  reports.py
src/use_cases/: admin.py  answer_key.py  code_dirs.py  compare_similarity.py  dynamics.py  files.py  reports.py
src/utils/: formater.py  formaters.py  functions.py  logging.py
tests/: conftest.py  mocks.py  test_admin.py  test_code_dirs.py  test_dynamics.py  test_files.py  test_reports.py
