[project]
authors = [
  {name = "mauprogramador", email = "sir.silvabmauricio@gmail.com"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: FastAPI",
  "Framework :: Pytest",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "License :: Free For Educational Use",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
]
dependencies = [
  "fastapi[standard] (>=0.115.6,<0.116.0)",
  "pydantic-settings (>=2.7.1,<3.0.0)",
  "itsdangerous (>=2.2.0,<3.0.0)",
  "python-multipart (>=0.0.20,<0.0.21)",
  "slowapi (>=0.1.9,<0.2.0)",
  "opencv-python (>=4.11.0.86,<5.0.0.0)",
  "playwright (>=1.55.0,<2.0.0)",
  "pydantic (>=2.11.9,<3.0.0)",
  "uvloop (>=0.21.0,<0.22.0)",
]
description = "RESTful API for managing the IFMS Development Competition"
keywords = ["python3", "competition", "technology", "web"]
license = {text = "MIT"}
name = "IFMSDevCompetition"
readme = "README.md"
requires-external = "make"
requires-python = ">=3.12"
version = "0.5.6"

[project.urls]
homepage = "http://127.0.0.1:8000/"
repository = "https://github.com/mauprogramador/ifms-dev-competition"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.18.1"
pylint = "^3.3.8"

[tool.poetry.group.test.dependencies]
httpx = "^0.28.1"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-order = "^1.3.0"
pytest-playwright-asyncio = "^0.7.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.mypy]
disable_error_code = ["assignment", "no-redef", "arg-type", "import-untyped"]
python_version = "3.12"

[tool.pylint]
disable = ["C0114", "C0115", "C0116", "C0123", "R0903", "R0913", "E1136", "E0611", "E1131", "R0801"]

[tool.isort]
include_trailing_comma = true
multi_line_output = 3

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "session"
asyncio_mode = "strict"
filterwarnings = ["ignore::DeprecationWarning"]
log_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "%(asctime)s %(levelname)s %(message)s"
testpaths = ["tests/"]
